--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.7.0
   cloud_firestore: ^4.4.3
   firebase_database: ^10.0.14
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +66,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - lib/json/
   - lib/assets/images/
 
 
